footer fix and also some spacing

--- a/docs/css/components/main.css
+++ b/docs/css/components/main.css
@@ -5303,7 +5303,7 @@ ul.no-bullets {
     padding: 10px 0; }
 
 section {
-  padding: 1.25rem 0; }
+  padding: 2rem 0; }
   section figure + p {
     margin-top: 10px; }
   section h3 + figure, section h4 + figure, section h5 + figure {
@@ -5331,6 +5331,54 @@ section {
 .content-full-width {
   margin-left: auto;
   margin-right: auto; }
+
+.m0 {
+  padding: 0rem; }
+
+.m05 {
+  padding: 0.025rem; }
+
+.m1 {
+  padding: 0.5rem; }
+
+.m2 {
+  padding: 1rem; }
+
+.m3 {
+  padding: 1.5rem; }
+
+.m4 {
+  padding: 2rem; }
+
+.m5 {
+  padding: 2.5rem; }
+
+.m6 {
+  padding: 3rem; }
+
+.p0 {
+  padding: 0rem; }
+
+.p05 {
+  padding: 0.025rem; }
+
+.p1 {
+  padding: 0.5rem; }
+
+.p2 {
+  padding: 1rem; }
+
+.p3 {
+  padding: 1.5rem; }
+
+.p4 {
+  padding: 2rem; }
+
+.p5 {
+  padding: 2.5rem; }
+
+.p6 {
+  padding: 3rem; }
 
 .card {
   padding: 25px 30px 10px;
@@ -5656,6 +5704,7 @@ footer {
     text-align: right;
     color: rgba(255, 255, 255, 0.8); }
   footer ul {
+    overflow: hidden;
     list-style: none;
     list-style-image: none;
     -webkit-margin-before: 0em;
@@ -5677,6 +5726,8 @@ footer {
   @media (max-width: 800px) {
     footer {
       padding: 1rem; }
+      footer li + li {
+        border-left: none; }
       footer .footer__group--links,
       footer .footer__group--legal {
         float: none;
